<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/activity_time"
        android:layout_marginLeft="20dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/_10m"/>

    <TextView
        android:id="@+id/activity_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/running_default"/>
    <TextView
        android:id="@+id/activity_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/_15_june"/>


</LinearLayout>